Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23368

ROUND(18446744073709551615,-11) returns a wrong result

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
    • 10.4.14, 10.5.5
    • Data types
    • None

    Description

      SELECT ROUND(18446744073709551615,-10), ROUND(18446744073709551615,-11);
      

      +---------------------------------+---------------------------------+
      | ROUND(18446744073709551615,-10) | ROUND(18446744073709551615,-11) |
      +---------------------------------+---------------------------------+
      |            18446744070000000000 |                     26290448384 |
      +---------------------------------+---------------------------------+
      

      The result for the second columns is wrong. The expected result is 18446744100000000000.

      Attachments

        Activity

          People

            bar Alexander Barkov
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: