sql/item_func.h
@@ -1775,7 +1775,8 @@ public:
   }
   void fix_arg_decimal();
   void fix_arg_int(const Type_handler *preferred,
-                   const Type_std_attributes *preferred_attributes);
+                   const Type_std_attributes *preferred_attributes,
+                   bool use_decimal_on_length_increase);
   void fix_arg_double();
   void fix_arg_time();
   void fix_arg_datetime();
